java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateLocalVariable5.pass
package org.netbeans.test.java.hints;

public abstract class CreateLocalVariable5 {
    
    /** Creates a new instance of AbstractClass */
    public CreateLocalVariable5() {
        
        String foo;System.err.println(foo);
        foo = "bar";
    }
    
}
